kubernetes/publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
  namespace: rabbitmq-demo
spec:
  selector:
    matchLabels:
      app: publisher
  template:
    metadata:
      labels:
        app: publisher
    spec:
      containers:
      - name: publisher
        image: rabbitmq_demo/publisher:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: publisher
  namespace: rabbitmq-demo
  labels:
    app: publisher
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: publisher
