kubernetes/service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: istio_demo/service1:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    app: service1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: service1
