kubernetes/service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  namespace: rabbitmq-demo
spec:
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
      - name: service3
        image: rabbitmq_demo/service3:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: rabbitmq-demo
  labels:
    app: service3
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: service3
