kubernetes/subscriber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriber
  namespace: rabbitmq-demo
spec:
  selector:
    matchLabels:
      app: subscriber
  template:
    metadata:
      labels:
        app: subscriber
    spec:
      containers:
      - name: subscriber
        image: rabbitmq_demo/subscriber:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: subscriber
  namespace: rabbitmq-demo
  labels:
    app: subscriber
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: subscriber
